--- a/_config/main.yaml
+++ b/_config/main.yaml
@@ -1,3 +1,3 @@
 main:
     log_level: 'INFO'
-    scheme: 'Teavar'  # Options: 'Teavar', 'Smore', 'Smore_connected', 'FlexileIP', 'FlexileBender'
+    scheme: 'Teavar'  # Options: 'Teavar', 'Smore', 'Smore_connected', 'FlexileIP', 'FlexileBender', 'SwanThroughput', 'SwanMaxmin'
