--- a/_config/ibm_2class_config.yaml
+++ b/_config/ibm_2class_config.yaml
@@ -1,15 +1,15 @@
 name: 'ibm'
 attributes:
-    scale_low: 2	# Scale of low priority traffic
-    beta_low: 0.999	# Target Availbility for low priority traffic
-    beta_high: 0.99	# Target Availbility for high priority traffic
-    step: 2000     # Used in FlexileBender model. Constraint the changes of critical scenarios from iteration to iteration.
+    scale_low: 2        # Scale of low priority traffic
+    beta_low: 0.999     # Target Availbility for low priority traffic
+    beta_high: 0.99     # Target Availbility for high priority traffic
+    step: 2000          # Used in FlexileBender model. Constraint the changes of critical scenarios from iteration to iteration.
 traffic_matrix:
-    num_matrices: 2	# Number of traffic matrices in the traffic file
-    tm_index_low: 0	# Traffic matrix index to be used for low priority traffic
-    tm_index_high: 1	# Traffic matrix index to be used for high priority traffic
+    num_matrices: 2     # Number of traffic matrices in the traffic file
+    tm_index_low: 0     # Traffic matrix index to be used for low priority traffic
+    tm_index_high: 1    # Traffic matrix index to be used for high priority traffic
 data: 
     cap_file: '../_data/ibm/ibm_capa.tab'
     tm_file: '../_data/ibm/ibm_traffic_2class.tab'
-    tunnel_file: '../_data/ibm/ibm_2class.tab'
+    tunnel_file: '../_data/ibm/ibm_tunnel_2class.tab'
     scenario_file: '../_data/ibm/ibm_scenario.tab'
